First functional skeleton with one paper and one member.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 ---
 layout: default
-title: HRC2 Lab
+title: HRC&#178; Lab
 categories:
  - home
 ---
+
 {% include JB/setup %}
 {% for page in site.categories.misc %}
 {% if page.homepage %}
@@ -15,6 +16,17 @@ categories:
 
 <div class="row">
 	<div class="col-md-12">
+		<img class="pull-left biglogo" src="{{ ASSET_PATH }}/images/logo/hrc2-logo-bw-sq.png">
+		<div class="bigtitle logobox">
+			human-robot collaboration &amp; companionship lab
+		</div>
+	</div>
+</div>
+
+
+<!-- 
+<div class="row">
+	<div class="col-md-12">
 	<div class="carousel-overlay logotitle logobox">
 		{{ homepage.title }}
 	</div>
@@ -24,8 +36,9 @@ categories:
 	    <li data-target="#carousel" data-slide-to="1"></li>
 	    <li data-target="#carousel" data-slide-to="2"></li>
 	  </ol>
+	-->
 	  <!-- Carousel items -->
-	  <!-- DAD: this should be dynamically populated. -->
+	  <!-- DAD: this should be dynamically populated. 
 	  <div class="carousel-inner">
 	    <div class="active item">
 	    	<img src="assets/themes/lab/images/banner/nasa-ocean.png" width='1200px' alt="">
@@ -37,18 +50,18 @@ categories:
 	    	<img src="assets/themes/lab/images/banner/phinch.png" width='1200px' alt="">
 	    </div>
 	  </div>
-	  <!-- Carousel nav -->
+	  <!-- Carousel nav 
 	  <a class="left carousel-control" href="#carousel" role="button" data-slide="prev">
 	    <span class="glyphicon glyphicon-chevron-left"></span>
-	    <!-- <span class="sr-only">Previous</span> -->
+	    <!-- <span class="sr-only">Previous</span> 
 	  </a>
 	  <a class="right carousel-control" href="#carousel" role="button" data-slide="next">
 	    <span class="glyphicon glyphicon-chevron-right"></span>
-	    <!-- <span class="sr-only">Next</span> -->
+	    <!-- <span class="sr-only">Next</span> 
 	  </a>
 	</div>
 	</div>				
-</div>
+</div -->
 
 <div class="hugespacer"></div>
 
@@ -102,7 +115,7 @@ categories:
 	</div>-->	
 	<div class="col-md-6">
 		<div class="head">
-			<a class="off" href="/blog/">Posts</a>
+			<a class="off" href="/blog/">Recent News</a>
 		</div>
 		<div class="bigspacer"></div>
 		<div class="feedbox pad-left">
@@ -134,9 +147,12 @@ categories:
 		</div>
 		<div class="bigspacer"></div>		
 	</div>
+
+
+
 	<div class="col-md-4">
 		<div class="head">
-			<a class="off" href="/papers/">Papers
+			<a class="off" href="/papers/">Recent Papers
 			</a>
 		</div>
 		<div class="bigspacer"></div>
