More team members and edits to the template

--- a/team/index.html
+++ b/team/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: "Team"
+title: "People"
 description: "People in the lab"
 group: navigation
 navorder: 2
@@ -24,6 +24,7 @@ navorder: 2
 			 	<div class="media-body">
 				<div class="head media-heading member-name"><a href="{{ member.url }}" class="off">{{ member.title }}</a></div>
 				<p class="note">{{ member.position }}</p>
+				<p class="note">{{ member.field }}</p>
 				</div>
 		</div>
     </div>	  
