--- a/team/index.html
+++ b/team/index.html
@@ -8,6 +8,10 @@ navorder: 2
 {% include JB/setup %}
 
 <div class="bigspacer"></div>
+<div class="bigtitle text-center">Current Members</div>
+<div class="bigspacer"></div>
+<div class="bigspacer"></div>
+
 {% assign current_team = site.categories.team | where: "alum","false"%}
 {% assign memberindex = 0 %}
 {% for member in current_team reversed %}
@@ -37,7 +41,6 @@ navorder: 2
 {% endif %}
 
 <div class="bigspacer"></div>
-<hr/>
 
 <!-- div class="row">
 	<div class="col-md-12">
