--- a/team/index.html
+++ b/team/index.html
@@ -12,9 +12,19 @@ navorder: 2
 <div class="bigspacer"></div>
 <div class="bigspacer"></div>
 
-{% assign current_team = site.categories.team | where: "alum","false"%}
+<!-- my sort of involved way of sorting by "position" - there may be a better way -->
+{% assign current_team = site.categories.team | where: "alum","false" | group_by: "position" %}
+
+{% assign pi = current_team | where: "name", "Principal Investigator"  %}
+{% assign phds = current_team | where: "name", "PhD Student"  | first | map: "items" | reverse %}
+{% assign mss = current_team | where: "name", "MS Student" | first | map: "items" | reverse %}
+{% assign mengs = current_team | where: "name", "MEng Student" | first | map: "items" | reverse %}
+{% assign ugs = current_team | where: "name", "Undergraduate Student" | first | map: "items" | reverse %}
+
+{% assign sorted_team = pi[0]["items"] | concat: phds | concat: mss | concat: mengs | concat: ugs %}
+
 {% assign memberindex = 0 %}
-{% for member in current_team reversed %}
+{% for member in sorted_team %}
 	{% assign memberindex = memberindex | plus: 1 %}
 	{% assign colindex = memberindex | modulo: 3 %}
 	{% if colindex == 1 %} <!-- opening of a new row -->
