--- a/index.html
+++ b/index.html
@@ -119,14 +119,12 @@ categories:
 		</div>
 		<div class="bigspacer"></div>
 		<div class="feedbox pad-left">
-			{% for post in site.categories.blog limit:4 %}
-			
+			{% for post in site.categories.news limit:4 %}
 				{% for member in site.categories.team %}
 					{% if member.handle == post.author_handle %}
 						{% assign author = member %}
 					{% endif %}
 				{% endfor %}		
-				
 				<div class="note-title">
 					<i class="fa fa-comment-o fa-fw"></i>
 					<a class="off" href="{{ post.url }}">
