--- a/team/index.html
+++ b/team/index.html
@@ -80,7 +80,8 @@ navorder: 2
 			 	<div class="media-body">
 				<div class="head media-heading member-name"><a href="{{ member.url }}" class="off">{{ member.title }}</a></div>
 				<p class="note">{{ member.position }}</p>
-				</div>
+				<p class="note">{{ member.field }}</p>
+			</div>
 		</div>
     </div>	  
 	{% if colindex == 0 %} <!-- closing a row -->
