--- a/people/index.html
+++ b/people/index.html
@@ -64,30 +64,26 @@ navorder: 2
 <div class="bigtitle text-center">Alumni</div>
 <div class="bigspacer"></div>
 
-{% assign alumni = site.categories.people | where: "alum","true"%}
-{% assign memberindex = 0 %}
-{% for member in alumni %}
-	{% assign memberindex = memberindex | plus: 1 %}
-	{% assign colindex = memberindex | modulo: 3 %}
-	{% if colindex == 1 %} <!-- opening of a new row -->
-	<div class="row">
-	{% endif %}
-	<div class="col-md-4 memberbox">
-		<div class="media">
-				<a class="pull-left" href="{{ member.url }}">
-				<img class="media-object member-photo" src="{{ member.image }}">
-				</a>
-			 	<div class="media-body">
-				<div class="head media-heading member-name"><a href="{{ member.url }}" class="off">{{ member.title }}</a></div>
-				<p class="note">{{ member.position }}</p>
-				<p class="note">{{ member.field }}</p>
-			</div>
+<!-- my sort of involved way of sorting by "degree" - there may be a better way -->
+{% assign alums = site.data.alums | group_by: "degree" %}
+
+{% assign degrees = "MS,MEng,Undergraduate" | split: ',' %}
+{% for deg in degrees %}
+	<h1>{{ deg }}</h1>
+	{% assign sgroup = alums | where: "name", deg | first | map: "items" | reverse %}
+	{% for member in sgroup %}
+		<div class="row alumbox">
+		<div class="col-md-3">
+			<div class="head strong"> {{ member.name }} </div>
 		</div>
-    </div>	  
-	{% if colindex == 0 %} <!-- closing a row -->
-	</div><div class="bigspacer"></div>
-	{% endif %}
+		<div class="col-md-3">
+			<div class="note">{{ member.field }}</div>
+		</div>
+		<div class="col-md-6">
+			<div class="note">&rarr; {{member.nowat}}</div>
+		</div>
+	</div>
+	{% endfor %}
 {% endfor %}
-{% if colindex != 0 %} <!-- close last open row -->
-</div><div class="bigspacer"></div>
-{% endif %}
+
+
