--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@ categories:
 		</div>
 		<div class="bigspacer"></div>		
 	</div>-->	
-	<div class="col-md-6">
+
+	<div class="col-md-4">
 		<div class="head">
 			<a class="off" href="/blog/">Recent News</a>
 		</div>
@@ -146,8 +147,6 @@ categories:
 		<div class="bigspacer"></div>		
 	</div>
 
-
-
 	<div class="col-md-4">
 		<div class="head">
 			<a class="off" href="/papers/">Recent Papers
@@ -177,6 +176,52 @@ categories:
 		</div>
 		<div class="bigspacer"></div>		
 	</div>
+
+	<div class="col-md-4">
+		<div class="head">
+			<a class="off" href="/press/">Selected Recent Press</a>
+		</div>
+		<div class="bigspacer"></div>
+		<div class="feedbox pad-left">
+		{% assign scoops = site.data.press | where: "selected", "yes" %}
+
+		{% for scoop in  scoops reversed %}
+			<div class="note">
+				 <a href="{{scoop.link}}">{{scoop.title}}</a> <b>{{scoop.venue}}</b> {{ scoop.date | date_to_string }}
+			</div>
+			<div class="spacer"></div>				
+
+		{% endfor %}
+
+<!--
+			{% for post in site.categories.news limit:4 %}
+				{% for member in site.categories.team %}
+					{% if member.handle == post.author_handle %}
+						{% assign author = member %}
+					{% endif %}
+				{% endfor %}		
+				<div class="note-title">
+					<i class="fa fa-comment-o fa-fw"></i>
+					<a class="off" href="{{ post.url }}">
+					{{ post.title }}
+					</a>
+				</div>
+				<div class="smallspacer"></div>
+				<div class="smallnote">
+					Posted
+					{{ post.date | date_to_string }}
+					{% if author %}
+					by <a class="off" href="{{ author.url }}">{{ author.nickname }}</a>
+					{% endif %}						
+				</div>
+				<div class="spacer"></div>	
+				<div class="spacer"></div>				
+			{% endfor %}
+		</div>
+	-->
+		<div class="bigspacer"></div>		
+	</div>
+
 </div>
 
 <div class="bigspacer"></div>
