--- a/index.html
+++ b/index.html
@@ -114,6 +114,8 @@ categories:
 		<div class="bigspacer"></div>		
 	</div>-->	
 
+<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --->
+
 	<div class="col-md-4">
 		<div class="head">
 			<a class="off" href="/blog/">Recent News</a>
@@ -147,6 +149,8 @@ categories:
 		<div class="bigspacer"></div>		
 	</div>
 
+<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --->
+
 	<div class="col-md-4">
 		<div class="head">
 			<a class="off" href="/papers/">Recent Papers
@@ -156,72 +160,43 @@ categories:
 		<div class="feedbox pad-left">		
 			{% for paper in site.categories.papers limit:4 %}
 				<div class="note-title">
-					<i class="fa fa-file-text-o fa-fw"></i>
+					<!--i class="fa fa-file-text-o fa-fw"></i-->
 					<a class="off" href="{{ paper.url }}">
 					{{ paper.title }}
 					</a>
-					<br/>
+					</div>
 					<div class='shortref note'>
 					{{ paper.shortref }}
+					<br/>Published {{ paper.date | date_to_string }}
 					</div>
-				</div>
-				<div class="smallspacer"></div>
-				<div class="smallnote">
-					Published
-					{{ paper.date | date_to_string }}
-				</div>
 				<div class="spacer"></div>	
 				<div class="spacer"></div>				
 			{% endfor %}
 		</div>
-		<div class="bigspacer"></div>		
+		<div class="bigspacer"></div>	
+		<a href="/papers/">More papers</a>
 	</div>
+
+<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --->
 
 	<div class="col-md-4">
 		<div class="head">
-			<a class="off" href="/press/">Selected Recent Press</a>
+			<a class="off" href="/press/">Selected Press</a>
 		</div>
 		<div class="bigspacer"></div>
 		<div class="feedbox pad-left">
-		{% assign scoops = site.data.press | where: "selected", "yes" %}
-
-		{% for scoop in  scoops reversed %}
+			{% assign scoops = site.data.press | where: "selected", "yes" | sort: "date"  %}
+			{% for scoop in  scoops reversed limit:10 %}
 			<div class="note">
-				 <a href="{{scoop.link}}">{{scoop.title}}</a> <b>{{scoop.venue}}</b> {{ scoop.date | date_to_string }}
+				 <a href="{{scoop.link}}">{{scoop.title}}</a> - <b>{{scoop.venue}}</b> {{ scoop.date | date_to_string }}
 			</div>
 			<div class="spacer"></div>				
-
-		{% endfor %}
-
-<!--
-			{% for post in site.categories.news limit:4 %}
-				{% for member in site.categories.team %}
-					{% if member.handle == post.author_handle %}
-						{% assign author = member %}
-					{% endif %}
-				{% endfor %}		
-				<div class="note-title">
-					<i class="fa fa-comment-o fa-fw"></i>
-					<a class="off" href="{{ post.url }}">
-					{{ post.title }}
-					</a>
-				</div>
-				<div class="smallspacer"></div>
-				<div class="smallnote">
-					Posted
-					{{ post.date | date_to_string }}
-					{% if author %}
-					by <a class="off" href="{{ author.url }}">{{ author.nickname }}</a>
-					{% endif %}						
-				</div>
-				<div class="spacer"></div>	
-				<div class="spacer"></div>				
 			{% endfor %}
+			<div class="bigspacer"></div>		
 		</div>
-	-->
-		<div class="bigspacer"></div>		
+		<a href="/press/">More press coverage</a>
 	</div>
 
-</div>
+<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --->
 
 <div class="bigspacer"></div>
