--- a/index.html
+++ b/index.html
@@ -173,8 +173,10 @@ categories:
 				<div class="spacer"></div>				
 			{% endfor %}
 		</div>
-		<div class="bigspacer"></div>	
+		<div class="spacer"></div>	
 		<a href="/papers/">More papers</a>
+		<div class="bigspacer"></div>
+
 	</div>
 
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --->
@@ -192,9 +194,11 @@ categories:
 			</div>
 			<div class="spacer"></div>				
 			{% endfor %}
-			<div class="bigspacer"></div>		
+			<div class="spacer"></div>		
 		</div>
 		<a href="/press/">More press coverage</a>
+		<div class="bigspacer"></div>		
+
 	</div>
 
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --->
