--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ categories:
 
 	<div class="col-md-4">
 		<div class="head">
-			<a class="off" href="/blog/">Recent News</a>
+			<a class="off" href="/news/">Recent News</a>
 		</div>
 		<div class="bigspacer"></div>
 		<div class="feedbox pad-left">
