--- a/press/index.html
+++ b/press/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: "Press"
 description: "Press Coverage"
-group: subnavigation
+group: navigation
 navorder: 6
 ---
 {% include JB/setup %}
