--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ categories:
 					{% endif %}
 				{% endfor %}		
 				<div class="note-title">
-					<i class="fa fa-comment-o fa-fw"></i>
+					<i class="far fa-comment fa-fw"></i>
 					<a class="off" href="{{ post.url }}">
 					{{ post.title }}
 					</a>
@@ -158,12 +158,15 @@ categories:
 		</div>
 		<div class="bigspacer"></div>
 		<div class="feedbox pad-left">		
-			{% for paper in site.categories.papers limit:4 %}
+			{% for paper in site.categories.papers limit: 8 %}
 				<div class="note-title">
 					<!--i class="fa fa-file-text-o fa-fw"></i-->
 					<a class="off" href="{{ paper.url }}">
 					{{ paper.title }}
 					</a>
+					{% if paper.award %}
+					<i class="fa fa-trophy fa-fw"></i>
+					{% endif %}
 					</div>
 					<div class='shortref note'>
 					{{ paper.shortref }}
