--- a/papers/index.html
+++ b/papers/index.html
@@ -6,48 +6,31 @@ group: navigation
 navorder: 3
 ---
 {% include JB/setup %}
-<div class="bigspacer"></div> 
-{% assign memberindex = 0 %}
-{% for paper in site.categories.papers %}
-  {% assign memberindex = memberindex | plus: 1 %}
-  {% assign colindex = memberindex | modulo: 3 %}
-  {% assign year = paper.year | plus: 0 %}
-  {% if colindex == 1 %} <!-- opening of a new row -->
-  <div class="row">
-  {% endif %}
 
-  <div class="col-md-4 paperbox">
-    {% if paper.embargo %}
-    <div class="media">
-         <img width=100 class="media-object pull-right" src="{{ paper.image }}"/>
-        <div class="media-body">
-          <div class="smallhead media-heading">
-              {{ paper.title }}
-          </div>
-          <p class="note">{{ paper.shortref }}</p>
-        </div>
-    </div>
-    {% else %}
-   <div class="media">
-        <a class="pull-right" href="{{ paper.url }}">
-          <img width=100 class="media-object" src="/assets/images/papers/{{ paper.image }}">
-        </a>
-      <div class="media-body">
-          <div class="smallhead media-heading">
-          <a href="{{ paper.url }}" class="off">{{ paper.title }}</a>
-          {% if paper.award %}
-					<i class="fa fa-trophy fa-fw"></i>
-					{% endif %}
-          </div> 
-          <p class="note">{{ paper.shortref }}</p>
-      </div>
-    </div>
-    {% endif %}
-  </div>
-  {% if colindex == 0 %} <!-- closing a row -->
-  </div><div class="bigspacer"></div>
-  {% endif %}
+<div class="bigspacer"></div> 
+
+{% assign newpapers = site.categories.papers | where_exp: "paper", "paper.year > 2015" %}
+{% assign oldpapers = site.categories.papers | where_exp: "paper", "paper.year < 2016" %}
+
+<div class="title ">Since 2016</div>
+<div class="bigspacer"></div>
+{% assign memberindex = 0 %}
+{% for paper in newpapers %}  
+  {% include themes/lab/onepaper.html %}
 {% endfor %}
+
+{% if colindex != 0 %} <!-- close last open row -->
+</div><div class="bigspacer"></div>
+{% endif %}
+
+<div class="title ">Selected Papers Before 2016</div>
+<div class="bigspacer"></div>
+{% assign memberindex = 0 %}
+{% for paper in oldpapers %}  
+  {% include themes/lab/onepaper.html %}
+{% endfor %}
+
+
 {% if colindex != 0 %} <!-- close last open row -->
 </div><div class="bigspacer"></div>
 {% endif %}
