--- a/papers/index.html
+++ b/papers/index.html
@@ -29,10 +29,10 @@ navorder: 3
   {% include themes/lab/onepaper.html %}
 {% endfor %}
 
-
 {% if colindex != 0 %} <!-- close last open row -->
 </div><div class="bigspacer"></div>
 {% endif %}
 
+<div class="">For more papers by Prof. Hoffman prior to HRC<sup>2</sup>, please see <a href="http://www.guyhoffman.com/category/publications/">this list</a></div>
 
 <div class="bigspacer"></div>
